  * Filtering for active/inactive token works correctly
  * no more support for truncated transaction ids
  * legacy selfservice qr and push token enrollment breaks with strings in otppin policy
  * forward token supports forwarding to a qr and push token
  * More customisation in /selfservice-legacy was broken (Followup to a v3.2.3 fix)

 -- LinOTP Packaging <packaging@linotp.de>  Wed, 23 Feb 2022 08:51:51 +0100

linotp (3.2.3-1) buster; urgency=low

  Fixes:
  * ensure all types of token will be migrated
  * ensure that dbconfig-common triggers the linotp database migration
  * Customisation of /manage and /selfservice-legacy was broken due to
  url path changes with LinOTP 3

 -- LinOTP Packaging <packaging@linotp.de>  Thu, 16 Feb 2023 17:50:00 +0100

linotp (3.2.2-1) buster; urgency=low

  Fixes:
  * Challenge database is reset once to ensure that Backups pre LinOTP 3
    correctly restore existing challenge-response tokens.
  * Migrate encypted data 'password' with legacy proprietary padding (LinOTP 2.9)
  * Fix migration of yubico token to LinOTP 3.2

 -- LinOTP Packaging <packaging@linotp.de>  Wed, 21 Dec 2022 17:40:00 +0100

linotp (3.2.1-1) buster; urgency=low

  Fixes:
  * Audit key verification errors solved by using newer version of pycryptodomex.
  * Remove weak file permissions in config dir.
  * Solved migration of QR-tokens which broke backup-restore from SVA-2.12.5 to SVA-3.0
  * Database re-encoding during database migration now also migrates
    managed users that were previously not correctly migrated.
  * Debian postinst trying to add admin users via htdigest. This is no longer supported
    and therefore removed. Use the linotp CLI manually instead.
  * Ensure that inactive policies are not evaluated. Previously, inactive policies were
    being evaluated in certain situations, leading to wrongly attributed permissions to
    logged-in administrators.

 -- LinOTP Packaging <packaging@linotp.de>  Fri, 15 Jul 2022 18:30:00 +0100
