@@ -306,79 +306,6 @@ class TestAutoassignmentController(TestController):
             expected="value-false",
         )
 
-    def test_policy_int_action(self):
-        """
-        If autoassigment=<int> the policy will work.
-
-        This is due to backwards compatibility because once upon a time that
-        value was used to determine the token length of the token. In order not
-        to break older system on upgrade we still support this syntax. The
-        'value' of the <int> is ignored (unless it is -1, see
-        test_policy_negative_action).
-        """
-        # Only one token required for this test
-        token_list = deepcopy(self.token_list[0:1])
-
-        # (user, password) pairs from myDefRealm
-        users = [
-            ("molière", "molière"),
-        ]
-
-        # Policy with <int> action
-        params = {
-            "name": "int_autoassignment",
-            "scope": "enrollment",
-            "action": "autoassignment=99",
-            "user": "*",
-            "realm": "mydefrealm",
-        }
-        self.create_policy(params)
-        self.policies_for_deletion.add("int_autoassignment")
-
-        self._set_token_realm(token_list, "mydefrealm")
-
-        user_name, user_pwd = users[0]
-        token = token_list[0]
-        self._validate(
-            user_name,
-            user_pwd + token["otps"][0],
-        )
-
-    def test_policy_negative_action(self):
-        """
-        If autoassigment=-1 the policy will not be active.
-
-        This is due to backwards compatibility.
-        """
-        # Only one token required for this test
-        token_list = deepcopy(self.token_list[0:1])
-
-        # (user, password) pairs from myDefRealm
-        users = [
-            ("molière", "molière"),
-        ]
-
-        # Policy with action -1
-        params = {
-            "name": "negative_autoassignment",
-            "scope": "enrollment",
-            "action": "autoassignment=-1",
-            "user": "*",
-            "realm": "mydefrealm",
-        }
-        self.create_policy(params)
-        self.policies_for_deletion.add("negative_autoassignment")
-
-        self._set_token_realm(token_list, "mydefrealm")
-
-        user_name, user_pwd = users[0]
-        token = token_list[0]
-        self._validate(
-            user_name,
-            user_pwd + token["otps"][0],
-            expected="value-false",
-        )
-
     def test_duplicate_otp(self):
         """
         If the OTP value matches for several token autoassignment fails
