@@ -45,6 +45,7 @@ linotp (3.3~0dev-1) buster-dev; urgency=low
   * legacy selfservice qr and push token enrollment breaks with strings in otppin policy
   * forward token supports forwarding to a qr and push token
   * More customisation in /selfservice-legacy was broken (Followup to a v3.2.3 fix)
+  * drop ability to define autoassignment policy with values
 
  -- LinOTP Packaging <packaging@linotp.de>  Wed, 23 Feb 2022 08:51:51 +0100
 
